[tool.poetry]
name = "abcd"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
docopt = "^0.6.2"
planout = "^0.6.0"
pydash = "^4.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[tool.poetry.scripts]
abcd = "abcd.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
